@@ -10,8 +10,6 @@ Mnemosyne 1.0:
 
 -give more feedback on import failure, plugin failure
 
--USB key version as alternative for web based revision
-
 -small version of Mnemosyne logo, add logo to about and getting started
 
 -tooltip for 'grade 0 limit'
@@ -20,7 +18,7 @@ Mnemosyne 1.0:
 
 -desktop file to /usr/share/applications, icon file (also Windows)
 
--check plugins for windows.
+-3 sided import
 
 -check automatic backups
 
